# autodrive_garage_mppi

./: .clangd  .gitignore  test
src/mppi_controller/: CMakeLists.txt  package.xml
src/mppi_controller/include/mppi_controller/: KinematicBicycleModel.hpp  MPPIController.hpp  mppi_cuda_core.hpp  vehicle_dynamics_2dof.hpp
src/mppi_controller/src/: KinematicBicycleModel.cpp  MPPIController.cpp  mppi_cuda_core.cu  mppi_node.cpp  vehicle_dynamics_2dof.cpp
src/mppi_controller/virtual_sim/: virtual_chassis.py
