<?xml version="1.0"?>
<package format="3">
  <name>mppi_controller</name>
  <version>0.0.0</version>
  <description>MPPI controller package</description>
  <maintainer email="you@example.com">ubuntu22</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>eigen</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>